// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> renders .action correctly 1`] = `
<div
  className="talixo-tab action"
>
  Tab
</div>
`;

exports[`<Tab /> renders active correctly 1`] = `
<div
  className="talixo-tab active"
>
  Tab
</div>
`;

exports[`<Tab /> renders children correctly 1`] = `
<div
  className="talixo-tab"
>
  Tab
</div>
`;
